more custom text for index work contact and about. also added work 2

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/plane.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Patrick's Contact Page</title>
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -79,19 +79,19 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          1 902 123 4567
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          placeholder@gmail.com
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          Halifax Nova Scotia
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
@@ -103,6 +103,9 @@
                       </a>
                       <a href="http://www.linkedin.com" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
+                      </a>
+                      <a href="http://www.Github.com/PatrickToole" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
                       </a>
 
                     </div>
@@ -122,7 +125,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>Placeholder Footer <a href="http://www.mashup-template.com/" title="Words that pop up when hover over">Link Text</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
       </div>
     </div>
   </div>
