--- a/templates/work2.html
+++ b/templates/work2.html
@@ -65,10 +65,10 @@
         <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Work HOBO Project</h1>
+            <h1 class="h2">001 : Weighted Random Character Selection</h1>
           </div>
-          <p>Developed a Desktop App that would scrape the web for Environment Canada weather station data in my area and combine that with data collected with a data logger. Then output the data to excel in a nice easy to read manner.
-          Built to the specifications of my employer. Time saving automation of work.</p>
+          <p>App that takes user inputs to collect weighted ratios for characters in Super Smash Bros. and
+            saves them to a database that can then be called upon to assign a random character to the player</p>
 
           <blockquote>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
