--- a/templates/works.html
+++ b/templates/works.html
@@ -74,8 +74,11 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <h3>Work HOBO Project</h3>
+                        <p>Developed a Desktop App that would scrape the web for Environment Canada weather
+                          station data in my area and combine that with data collected with a data logger.
+                          Then output the data to excel in a nice easy to read manner. Built to the specifications
+                          of my employer. Time saving automation of work.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -85,9 +88,10 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Weighted Random Character Selection</h3>
+                        <p>App that takes user inputs to collect weighted ratios for characters in Super Smash Bros. and
+                        saves them to a database that can then be called upon to assign a random character to the player</p>
+                        <a href="./work2.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
