--- a/templates/about.html
+++ b/templates/about.html
@@ -61,16 +61,26 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
-                  <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  <h3>Work History</h3>
+                  <p>I am currently working as the Lead Wave Tank Operator for the Department
+                    of Fisheries and Oceans of Canada.
+                  <ul>
+                      <li>Operation of Scientific Experiments</li>
+                      <li>Extraction and Data Collection</li>
+                      <li>Data Analysis</li>
+                  </ul></p>
+                  <h3>Hobbies </h3>
+                  <p>I have many hobbies including:<ul>
+                      <li>Python Development</li>
+                      <li>Working Out</li>
+                      <li>Playing Video games</li>
+                      <li>Making my own Beer</li>
+                  </ul>
+                  For all of my hobbies I like to use Python to streamline the process. You can
+                  see some of the ways I have improved my hobbies in the work section.</p>
+                  <h3>Family</h3>
+                  <p>I have a beautiful wife, Alicia, and 2 adorable girls, Lily and Raelyn.
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/me.jpg" class="img-responsive" alt="">
@@ -90,7 +100,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>Placeholder footer</p>
       </div>
     </div>
   </div>
