--- a/templates/works.html
+++ b/templates/works.html
@@ -100,9 +100,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Random CrossFit Workout</h3>
+                        <p>Takes 10 CrossFit workouts that can be done from home and gives you a random one to do.</p>
+                        <a href="./work3.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
